# ByteDiceAssistant

./: .gitignore  Cargo.toml  README.md  TODO.md  bk_week_help.md  bk_week_help.txt  bk_week_help_dc.md  bk_week_help_re.md  bk_week_suggestions.txt  help.txt  req.txt
cfg/: 8-ball_classic.txt  8-ball_quirky.txt
data/: 8-ball_quirky.txt  bk_mods.json  cfg.json  cfg_default.json  discord_data_preset.json  re_data_preset.json  reddit_data_preset.json  status.txt  write_json.json
data/db/: .gitkeep
data/defaults/: cfg_default.toml  dc_data_preset.json  re_data_preset.json
data/lang/: en.json  en_deprecated.json  gpt_fr.json  miserable.json
src/: bk_week_cmds.rs  cmds.rs  data.rs  db.rs  events.rs  games.rs  gen.rs  lang.rs  macros.rs  main.rs  messages.rs  python.rs  python_comms.rs  schedule.rs  websocket.rs
src/cmds/: add_server.rs  db.rs  debug.rs  eight_ball.rs  embed.rs  generic.rs  help.rs  ping.rs  reddit.rs  reload_cfg.rs  stop.rs  whoami.rs  wwrps.rs
src/db/: bot_data.rs  cfg.rs  discord.rs  env_vars.rs  generic.rs  keys.rs  reddit.rs  terminal_args.rs
src/db_cmds/: add_server.rs  main_cmd.rs  reddit_channel.rs  wwrps_channel.rs
src/debug_cmds/: guild_invite.rs  main_cmd.rs  ping.rs  reload_cfg.rs  save.rs  stop.rs  view_guilds.rs
src/games/: wwrps.rs
src/python/: bot.py  cmds.py  data.py  macros.py  main.py  posts.py  printColors.py  py_cmds.py  py_data.py  py_websocket.py  reddit.py  rust_comms.py
src/re_cmds/: add.rs  admin_bind.rs  approve.rs  generic_fns.rs  get.rs  remove.rs  shorturl.rs  top.rs  update.rs  vote.rs
(+28 files in other folders)
