[package]
name = "byte_dice_assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
formatx = "0.2.3"
futures = "0.3.31"
poise = "0.6.1"
pyo3 = "0.23.4"
rand = "0.9.0"
regex = "1.11.1"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.26.1"
toml = "0.8.23"
